ui/components/chelzoo/ChelzooHero/ChelzooHero.scss
.chelzoo-hero {
  @include inter-font;

  position: relative;
  padding: 48px 0 120px;
  min-height: calc(100vh - $header-redesign-height);
  font-weight: 500;

  &__decor {
    position: absolute;
    width: 280px;
    height: 280px;
    background: no-repeat url("/images/flower.svg");
    background-size: contain;

    @include tablet {
      width: 400px;
      height: 400px;
    }

    @include tablet-xl {
      width: 640px;
      height: 640px;
    }

    @include desktop-xl {
      width: 900px;
      height: 900px;
    }

    &--left {
      left: -128px;
      top: 12px;

      @include tablet {
        left: -200px;
        top: 16px;
      }

      @include tablet-xl {
        left: -292px;
        top: 0;
      }

      @include desktop-xl {
        left: -410px;
        top: 0;
      }
    }

    &--right {
      right: -120px;
      top: 332px;

      @include tablet {
        right: -83px;
        top: 260px;
      }

      @include tablet-xl {
        right: -520px;
        top: 170px;
      }

      @include desktop {
        right: -178px;
        top: 170px;
      }

      @include desktop-xl {
        right: -128px;
        top: 12px;
      }
    }
  }

  &__wrapper {
    position: relative;
    display: flex;
    align-items: center;
    flex-direction: column;
    padding-right: 16px;
    padding-left: 16px;

    @include desktop-xl {
      padding-right: 24px;
      padding-left: 24px;
    }
  }

  &__title {
    @include unbounded-font;

    margin-bottom: 40px;
    max-width: 350px;
    font-weight: 400;
    font-size: 40px;
    line-height: 0.9;
    text-align: center;

    @include tablet-xl {
      margin-bottom: 24px;
      max-width: 670px;
      font-size: 80px;
    }

    @include desktop {
      max-width: 700px;
    }

    @include desktop-xl {
      margin-bottom: 32px;
      max-width: 1080px;
      font-size: 112px;
    }

    &--max-width-lg {
      max-width: unset;
      line-height: 1.1;
    }
  }

  &__media {
    position: relative;
    overflow: hidden;
    margin-bottom: 40px;
    border-radius: 24px;
    min-height: 229px;
    max-width: 343px;
    aspect-ratio: 343/229;

    @include tablet {
      margin-bottom: 40px;
      min-height: 320px;
      max-width: 480px;
      aspect-ratio: 480/320;
    }

    @include tablet-xl {
      margin-bottom: 24px;
      border-radius: 28px;
      min-height: 380px;
      max-width: 570px;
      aspect-ratio: 570/380;
    }

    @include desktop-xl {
      margin-bottom: 32px;
      border-radius: 40px;
      min-height: 520px;
      max-width: 780px;
      aspect-ratio: 780/520;
    }
  }

  img,
  video {
    width: 100%;
  }

  img {
    object-fit: cover;
  }

  &__content {
    align-self: flex-start;
    max-width: 336px;

    @include tablet-xl {
      max-width: 408px;
    }

    @include desktop {
      max-width: 390px;
    }

    @include desktop-xl {
      max-width: 544px;
    }
  }

  &__label {
    display: block;
    margin-bottom: 16px;
    border-radius: 4px;
    padding: 4px 12px;
    width: fit-content;
    line-height: 1.3;
    background-color: $color-grass-green;

    @include tablet-xl {
      margin-bottom: 24px;
      font-size: 18px;
    }

    @include desktop {
      margin-bottom: 24px;
    }

    @include desktop-xl {
      margin-bottom: 32px;
      padding: 8px 20px;
      font-size: 26px;
    }
  }

  &__subtitle {
    margin-bottom: 8px;
    font-size: 20px;
    line-height: 1.2;

    @include tablet-xl {
      margin-bottom: 12px;
      font-size: 22px;
    }

    @include desktop-xl {
      margin-bottom: 16px;
      font-size: 32px;
    }
  }

  &__description {
    font-size: 16px;
    line-height: 1.3;
    color: $color-grey-300-redesign;

    @include tablet-xl {
      font-size: 18px;
    }

    @include desktop-xl {
      font-size: 26px;
    }
  }

  &__scroll-button {
    position: absolute;
    left: 50%;
    bottom: 48px;
    display: flex;
    align-items: center;
    justify-content: center;
    border: none;
    border-radius: 50%;
    padding: 0;
    width: 32px;
    height: 32px;
    background: $color-white;
    cursor: pointer;
    transform: translateX(-50%);

    svg {
      width: 14px;
      height: 14px;

      @include desktop-xl {
        width: 19px;
        height: 19px;
      }
    }

    @include tablet {
      bottom: 72px;
    }

    @include tablet-xl {
      bottom: 48px;
    }

    @include desktop-xl {
      bottom: 68px;
      width: 44px;
      height: 44px;
    }
  }

  @include tablet {
    padding-bottom: 48px;
  }

  @include tablet {
    min-height: calc(100vh - $header-redesign-height-tablet-xl);
  }

  @include desktop-xl {
    padding: 64px 0;
    min-height: calc(100vh - $header-redesign-height-desktop-xl);
  }
}

